Paper 이벤트 리팩토링